--- a/240625/index.html
+++ b/240625/index.html
@@ -31,6 +31,15 @@
       <li>볼에 샐러드 채소와 레드향, 아보카도, 토마토를 넣고 드레싱을 뿌리면 끝!</li>
     </ul>
     <h2>상품 구성</h2>
+    <dl>
+      <dt>선물용 3kg</dt>
+      <dd>소과 13~16과</dd>
+      <dd>중과 10~12과</dd>
+    </dl>
+    <dl>
+      <dt>선물용 5kg</dt>
+      <dd>중과 15~19과</dd>
+    </dl>
   </div>
 </body>
 
