--- a/240625/index.html
+++ b/240625/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Information</title>
+  <style>
+    table,th,td {
+      border: 1pt solid #ccc; /* 셀 테두리 속성 */
+      border-collapse: collapse; /* 표(table)의 테두리와 셀(td)의 테두리 사이의 간격 */
+    }
+    td,th { padding: 10px 20px; } /* 셀 테두리와 내용 사이의 간격(패딩) */
+  </style>
 </head>
-
 <body>
-  <div style="border: 1pt red dotted;">
+  <div style="border: 1pt red dotted; padding: 10px 20px;">
     <h1><mark>레드향</mark></h1>
     <p>껍질에 붉은 빛이 돌아 <b>레드향</b>이라 불린다.</p>
     <p><span style="color:rgb(255, 0, 55)" ;>레드향</span>은 <em>한라봉과 귤을 교배</em>한 것으로 <br> 일반 귤보다 2~3배 크고,
@@ -40,7 +45,43 @@
       <dt>선물용 5kg</dt>
       <dd>중과 15~19과</dd>
     </dl>
+    <table>
+      <caption>선물용과 가정용 상품 구성</caption>
+      <thead>
+        <tr>
+          <th>용도</th>
+          <th>중량</th>
+          <th>갯수</th>
+          <th>가격</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>선물용</td>
+          <td>3kg</td>
+          <td>11~16과</td>
+          <td>35,000원</td>
+        </tr>
+        <tr>
+          <td>선물용</td>
+          <td>5kg</td>
+          <td>18~26과</td>
+          <td>52,000원</td>
+        </tr>
+        <tr>
+          <td>가정용</td>
+          <td>3kg</td>
+          <td>11~16과</td>
+          <td>30,000원</td>
+        </tr>
+        <tr>
+          <td>가정용</td>
+          <td>5kg</td>
+          <td>18~26과</td>
+          <td>47,000원</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </body>
-
 </html>
