--- a/240626/index.html
+++ b/240626/index.html
@@ -14,6 +14,10 @@
 </head>
 <body>
   <div style="border: 1pt red dotted; padding: 10px 20px;">
+    <a href="../medias/order.html" target="_blank"><img src="../images/tangerines.jpg" alt="레드향"></a>
+    <!-- <img src="../images/tangerines.jpg" alt="레드향"> -->
+    <!-- <embed src="../medias/spring.mp3"> -->
+    <audio src="../medias/spring.mp3" controls ></audio>  
     <h1><mark>레드향</mark></h1>
     <p>껍질에 붉은 빛이 돌아 <b>레드향</b>이라 불린다.</p>
     <p><span style="color:rgb(255, 0, 55)" ;>레드향</span>은 <em>한라봉과 귤을 교배</em>한 것으로 <br> 일반 귤보다 2~3배 크고,
@@ -21,6 +25,13 @@
     <p><i>비타민 C</i>와 <i>비타민 P</i>가 풍부해 <br><strong>혈액순환, 감기예방</strong> 등에 좋은 것으로
       알려져 있다.</p>
     <h2>레드향 샐러드 레시피</h2>
+    <video src="../medias/salad.mp4" controls width="700" autoplay muted loop></video>
+    <p>원래 크기의 이미지</p>
+    <img src="../images/salad.jpg" alt ="레드향">
+    <p>width="50%", height="50%"로 지정한 이미지</p>
+    <img src="../images/salad.jpg" alt="레드향" width="50%">
+    <p>width="150"으로 지정한 이미지</p>
+    <img src="../images/salad.jpg" alt="레드향" width="150">
     <p><b>재료 : </b>레드향 1개, 아보카도 1개, 토마토 1개, 샐러드 채소 30g</p>
     <p><b>드레싱 : </b>올리브유 1큰술, 레몬즙 2큰술, 꿀 1큰술, 소금 약간</p>
     <!-- <ol type="a" start="4" reversed>
@@ -45,6 +56,7 @@
       <dt>선물용 5kg</dt>
       <dd>중과 15~19과</dd>
     </dl>
+    <a href="../medias/order.html" target="_blank">주문서 작성하기</a>
     <table>
       <caption>선물용과 가정용 상품 구성</caption>
       <thead>
@@ -82,6 +94,8 @@
         </tr>
       </tbody>
     </table>
+    <h1>웹 문서에 PDF 파일 삽입하기</h1>
+    <object width="900" height="800" data="../medias/product.pdf"></object>    
   </div>
 </body>
 </html>
